# ai-analyst

./: .gitleaks.toml  CHANGELOG.md  HISTORY.md  LICENSE  README.md  pyproject.toml
.claude/skills/TEMPLATE/: skill.md
.github/: CODEOWNERS  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data-generation/: BUILD_SPEC.md  config.yaml  export.py  generate.py  load_duckdb.py  quality_gates.py  requirements.txt
data-generation/capstone/: apply_landmines.py  capstone_stories.py
data-generation/generators/: calendar_gen.py  experiment_assignments.py  experiments.py  memberships.py  nps_responses.py  orders.py  products.py  promotions.py  sessions_and_events.py  support_tickets.py  users.py
data-generation/stories/: activation_drop.py  checkout_confound.py  nps_paradox.py  power_user_fallacy.py  ticket_spike.py
data/mamma_mia/raw/: README.md
data/mamma_mia/raw/comparables/: INTAKE.md
data/mamma_mia/raw/digital_ads/: INTAKE.md
data/mamma_mia/raw/dynamic_pricing/: INTAKE.md
data/mamma_mia/raw/email_wordfly/: INTAKE.md
data/mamma_mia/raw/google_analytics/: INTAKE.md
data/mamma_mia/raw/tessitura/: INTAKE.md
